# kempff

./: CMakeLists.txt
cmake/: Dependencies.cmake  FetchContent.cmake  FetchDependency.cmake  StdModule.cmake
src/: CMakeLists.txt  main.cpp  template.hpp
src/Common/: CMakeLists.txt  Common.cppm  File.cpp  File.cppm  Logger.cpp  Logger.cppm  Utility.cppm
src/Core/: CMakeLists.txt  MidiFile.cpp  MidiFile.cppm
